--- a/app/src/main/res/layout/activity_add.xml
+++ b/app/src/main/res/layout/activity_add.xml
@@ -6,13 +6,14 @@
     android:layout_height="match_parent"
     tools:context=".AddActivity">
 
-
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:orientation="vertical"
         android:padding="30dp"
         tools:visibility="invisible">
+
+        <include layout="@layout/toolbar"/>
 
         <Spinner
             android:id="@+id/spinnerType"
