--- a/app/src/main/res/layout/toolbar.xml
+++ b/app/src/main/res/layout/toolbar.xml
@@ -1,5 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:layout_width="match_parent"
     android:layout_height="match_parent">
@@ -9,6 +11,7 @@
         android:layout_height="wrap_content"
         android:padding="10dp"
         android:id="@+id/line1"
+        android:background="?attr/colorPrimary"
         android:orientation="horizontal">
 
         <ImageButton
@@ -21,6 +24,7 @@
             />
 
         <TextView
+            android:id="@+id/toolbarTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_weight="1"
@@ -31,14 +35,22 @@
             android:textSize="22dp"
             android:textStyle="bold" />
 
-        <!--TextView
-            android:layout_width="wrap_content"
+        <ImageButton
+            android:id="@+id/profileButton"
+            android:layout_width="30dp"
+            android:layout_height="30dp"
+            android:layout_gravity="end"
+            android:src="@drawable/ic_baseline_account_circle_24"
+            tools:ignore="MissingConstraints" />
+
+        <ImageButton
+            android:id="@+id/settings"
+            android:layout_width="30dp"
             android:layout_height="wrap_content"
-            android:text="Sair"
-            android:textColor="#FFFFFF"
-            android:layout_alignParentRight="true"
-            android:textStyle="normal"
-            android:textSize="15dp"/-->
+            android:layout_weight="1"
+            app:srcCompat="@drawable/ic_baseline_exit_to_app_24"
+            tools:ignore="VectorDrawableCompat" />
+
 
     </LinearLayout>
 
